projet_gl/src/test/deca/syntax/invalid/readExpr/incorrectReadInt.deca
// Description:
//    invalid test parser for readInt.
//
// Resultats:
//    ligne 12 : extraneous input 'a' expecting ')'
//
// Historique:
//    cree le 12/01/2024

{
    int a;
    readInt(a);
}